istio-manifests/payment-destination-rule.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Zero Trust: Explicitly require mTLS when communicating with paymentservice.
# Istio auto-upgrades to mTLS between sidecars by default, but this
# DestinationRule makes the intent visible and documented.
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: paymentservice-mtls
spec:
  host: paymentservice
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
